scripts/expose/deck-ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: deck-ingress
  namespace: spinnaker
  annotations:
    ingress.gcp.kubernetes.io/pre-shared-cert: $MANAGED_CERT
    kubernetes.io/ingress.global-static-ip-name: $STATIC_IP_NAME
spec:
  rules:
  - http:
      paths:
      - path: /*
        pathType: ImplementationSpecific
        backend:
          service:
            name: spin-deck
            port:
              number: 9000
